Fix margin on mobile view

--- a/src/app/modules/project/add/main/main.component.scss
+++ b/src/app/modules/project/add/main/main.component.scss
@@ -111,9 +111,12 @@
 
 .modal-dialog.wizard-modal {
   max-width: 90vw;
-  max-height: 70vh;
   margin: 45px auto 30px auto;
   border: none;
+
+  @media only screen and (max-width: 1000px) {
+    margin: 22px auto;
+  }
 
   .modal-content {
     border: none;
